处理TankDirChangedMsg